--- a/src/styles.scss
+++ b/src/styles.scss
@@ -600,6 +600,13 @@ small {
 		.p-carousel-content {
 			overflow: visible;
 		}
+		.p-carousel-items-content {
+			height: auto;
+			background: var(--uniprep-primaryop10);
+			border: 2px solid var(--uniprep-primary);
+			border-radius: 20px;
+			margin: 0 2rem;
+		}
 		.p-carousel-container {
 			position: relative;
 		}
@@ -746,8 +753,11 @@ small {
 }
 
 .navbar {
-	transition: 0.2s;
+	transition: 200ms linear;
 	background: white;
+}
+.darksection {
+	transition: 200ms linear;
 }
 
 .darkmode {
@@ -756,6 +766,7 @@ small {
 	h3,
 	h4,
 	h5,
+	h6,
 	p {
 		color: #fff;
 	}
@@ -779,22 +790,73 @@ small {
 	}
 
 	.navbar {
-		transition: 0.2s;
-		background: transparent;
+		transition: 200ms linear;
+		background: #121212 !important;
+		.navbar-toggler-icon
+			{
+				background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 1%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e") !important;
+			}
+	}
+	.offcanvas
+	{
+		background: #000;
+		color:#fff;
+		.btn-close
+		{
+			background:transparent url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23fff'%3e%3cpath d='M.293.293a1 1 0 0 1 1.414 0L8 6.586 14.293.293a1 1 0 1 1 1.414 1.414L9.414 8l6.293 6.293a1 1 0 0 1-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L6.586 8 .293 1.707a1 1 0 0 1 0-1.414z'/%3e%3c/svg%3e") center/1em auto no-repeat
+		}
 	}
 
 	.darksection {
+		
 		background-color: #121212;
+		transition: 200ms linear;
 		.video-gradient {
 			background: linear-gradient(to top, #121212, transparent);
 		}
 		.marquee-imgu {
 			filter: brightness(0) invert(1);
 		}
-	}
-
-	.navbar {
-		background: #121212 !important;
+		.featurecard {
+			border-top: 1px solid #fff !important;
+			.accordion-header button {
+				color: #fff !important;
+			}
+			.accordion-button::after
+			{
+				background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23ffffff'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+			}
+		}
+		.faqcard {
+			background: #202124;
+			border: 1px solid #202124 !important;
+		}
+		
+		.faqcard .accordion-button::after {
+		}
+		
+		.faqcard .accordion-collapse {
+			background: #202124 !important;
+		}
+		
+		.faqcard .accordion-button:not(.collapsed) {
+			background: #202124;
+			color:white !important;
+		}
+		
+		/* .faqcard .accordion-button:not(.collapsed)::after
+		{
+			background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23ffffff'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+		} */
+		
+		.faqcard .accordion-header button {
+			background: #202124 !important;
+			color: #8b939d !important;
+		}
+		
+		.faqcard .accordion-body {
+			color: #8b939d !important;
+		}
 	}
 
 	#menu-items {
@@ -1474,6 +1536,12 @@ small {
 		.p-dialog {
 			width: 95%;
 		}
+	}
+	.landingmodeswitch
+	{
+		position: fixed !important;
+		bottom: 1rem;
+		right: 2rem !important;
 	}
 }
 
